# BioSeq-Project2

./: .gitignore  CMakeLists.txt  Makefile  README.md  alignment.h  control  control_global_affine  control_global_affine~  control_global_linear  generate_sequences.sh  global_linear  global_linear.cpp  global_linear.h  main.cpp  make.sh  performance  project1.cpp
input/: p2_seq1.fasta  p2_seq2.fasta  p2_seq3.fasta  p2_seq4.fasta  p2_seq5.fasta  random-n10-seed.fasta  random-n100-seed.fasta  random-n100-seed100.fasta  random-n100-seed4144.fasta  random-n1000-seed.fasta  random-n1000-seed1000.fasta  random-n1000-seed4260.fasta  random-n10000-seed.fasta  random-n10000-seed10000.fasta  random-n10000-seed4320.fasta  random-n1100-seed.fasta  random-n11000-seed11000.fasta  random-n11000-seed4325.fasta  random-n1200-seed.fasta  random-n12000-seed.fasta  random-n12000-seed12000.fasta  random-n12000-seed4330.fasta  random-n1300-seed.fasta  random-n13000-seed13000.fasta  random-n13000-seed4335.fasta  random-n1400-seed.fasta  random-n14000-seed.fasta  random-n14000-seed14000.fasta  random-n14000-seed4340.fasta  random-n1500-seed.fasta  random-n15000-seed15000.fasta  random-n15000-seed4345.fasta  random-n1600-seed.fasta  random-n16000-seed.fasta  random-n16000-seed16000.fasta  random-n16000-seed4350.fasta  random-n1700-seed.fasta  random-n17000-seed17000.fasta  random-n17000-seed4356.fasta  random-n1800-seed.fasta  (+58 more)
output/: .Rhistory  compute_s.stat  find_alignment.stat  statistics.R  statistics.R~
src/: alignment.h  common.h  global_affine.cpp  global_affine.cpp~  global_affine.h  (+7 more)
